--- a/gb/19/3/3/n11084891.md
+++ b/gb/19/3/3/n11084891.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yrwdct367/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>放大量糖 甜度竟刚好？专家揭果味饮料制作过程</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/yinliao2-600x400.jpg" />
 <h6>我们喝的果味饮料，是怎么制作出来的？(Shutterstock)
 </h6>
 <hr>
-<p>我们爱喝的橙子味、水蜜桃味、葡萄味、哈密瓜味等等水果口味的<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E9%A5%AE%E6%96%99.md#1">饮料</a>，究竟是用什么做成的？你可曾想过，喝起来酸甜刚刚好的饮料，里面却有超过1/10的<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E7%B3%96%E5%88%86.md#1">糖分</a>吗？</p>
-<p>日本<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B7%BB%E5%8A%A0%E5%89%82.md#1">添加剂</a>专家、被称为“添加剂活辞典”的安部司，为了让人们辨清这些“果味<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E9%A5%AE%E6%96%99.md#1">饮料</a>”的可怕之处，曾公开演示这些饮料的制作方法。孩子和父母亲眼目睹这些具有柠檬、橙汁、哈密瓜等仿水果味的饮料是如何制作的，都本能地抵触。演示现场中，没有一个孩子愿意伸手接过这些美味的饮料，灌进自己的身体。</p>
-<p><span style="color: #008000;">前篇：</span><span style="text-decoration: underline;"><span style="color: #008000; text-decoration: underline;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/3/n10951935.md#1" target="_blank" rel="noopener noreferrer">为什么廉价火腿香肠尽量少吃？专家告诉你原因</a></span></span></p>
+<p>我们爱喝的橙子味、水蜜桃味、葡萄味、哈密瓜味等等水果口味的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%A5%AE%E6%96%99.md#1">饮料</a>，究竟是用什么做成的？你可曾想过，喝起来酸甜刚刚好的饮料，里面却有超过1/10的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%B3%96%E5%88%86.md#1">糖分</a>吗？</p>
+<p>日本<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B7%BB%E5%8A%A0%E5%89%82.md#1">添加剂</a>专家、被称为“添加剂活辞典”的安部司，为了让人们辨清这些“果味<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%A5%AE%E6%96%99.md#1">饮料</a>”的可怕之处，曾公开演示这些饮料的制作方法。孩子和父母亲眼目睹这些具有柠檬、橙汁、哈密瓜等仿水果味的饮料是如何制作的，都本能地抵触。演示现场中，没有一个孩子愿意伸手接过这些美味的饮料，灌进自己的身体。</p>
+<p><span style="color: #008000;">前篇：</span><span style="text-decoration: underline;"><span style="color: #008000; text-decoration: underline;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/3/n10951935.md#1" target="_blank" rel="noopener noreferrer">为什么廉价火腿香肠尽量少吃？专家告诉你原因</a></span></span></p>
 <h2><span style="color: #008000;">安部司演示果味饮料的制作方法</span></h2>
-<p>安部司非常清楚，这些无<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%9E%9C%E6%B1%81.md#1">果汁</a>饮料，包括一部分兑入果汁的饮料，由于实在是太好喝了，很少有人能够拒绝它的诱惑，孩子们更是如此。即使父母隐隐约约觉得这些饮料喝多了对身体无益，劝告孩子少喝，也无济于事。于是家里的冰箱照样堆满了各式各样的饮料，只要孩子们高兴，父母最后也只好听之任之。</p>
-<p>但是这些饮料，绝大多数不仅含有毒素，且因<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E7%B3%96%E5%88%86.md#1">糖分</a>高得惊人，不知不觉就在损害孩子们的身体，很多的青少年糖尿病，就是这样造成的。孩子们只有亲眼看到这些饮料的制作真相，才会心生畏惧，远离它们。因此，安部司当年离开食品<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%B7%BB%E5%8A%A0%E5%89%82.md#1">添加剂</a>会社，展开这些揭露加工食品制造内幕的活动时，面对着天真无辜的孩子——还无法像大人那样去关心那些化学术语的孩子，他决定亲自在孩子们面前演示饮料的制作过程。</p>
+<p>安部司非常清楚，这些无<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%9C%E6%B1%81.md#1">果汁</a>饮料，包括一部分兑入果汁的饮料，由于实在是太好喝了，很少有人能够拒绝它的诱惑，孩子们更是如此。即使父母隐隐约约觉得这些饮料喝多了对身体无益，劝告孩子少喝，也无济于事。于是家里的冰箱照样堆满了各式各样的饮料，只要孩子们高兴，父母最后也只好听之任之。</p>
+<p>但是这些饮料，绝大多数不仅含有毒素，且因<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%B3%96%E5%88%86.md#1">糖分</a>高得惊人，不知不觉就在损害孩子们的身体，很多的青少年糖尿病，就是这样造成的。孩子们只有亲眼看到这些饮料的制作真相，才会心生畏惧，远离它们。因此，安部司当年离开食品<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B7%BB%E5%8A%A0%E5%89%82.md#1">添加剂</a>会社，展开这些揭露加工食品制造内幕的活动时，面对着天真无辜的孩子——还无法像大人那样去关心那些化学术语的孩子，他决定亲自在孩子们面前演示饮料的制作过程。</p>
 <p>由于效果太好，他的演讲大受欢迎，很多幼稚园、保育园都邀请他去给孩子们演讲，我们如今了解到的，是他记录在书中的部分内容。</p>
-<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://dvsmtoxipy5i5.cloudfront.net/B1ihkms4s"><img width="600" src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/SsgJbmV_kpA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/F3phkms4e"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/SsgJbmV_kpA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div></p>
-<p style="text-align: center;"><span style="color: #008000;">（相关视频/来源：<a style="color: #008000;" href=""></a><a href="https://dvsmtoxipy5i5.cloudfront.net/B1ihkms4s"><img width="600" src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=SsgJbmV_kpA" target="_blank" rel="noopener noreferrer">Youtube</a>）</span></p>
-<p>安部司在幼稚园首先演示的，是柠檬味无<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%9E%9C%E6%B1%81.md#1">果汁</a>饮料的制作。</p>
+<p style="text-align: center;"><span style="color: #008000;">（相关视频/来源：<a style="color: #008000;" href=""></a><a href="https://d3vg08phoazui6.cloudfront.net/F3phkms4e"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=SsgJbmV_kpA" target="_blank" rel="noopener noreferrer">Youtube</a>）</span></p>
+<p>安部司在幼稚园首先演示的，是柠檬味无<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%9C%E6%B1%81.md#1">果汁</a>饮料的制作。</p>
 <p>首先，他摆出一个装有水的容器，然后告诉大家，第一步会投入柠檬色的着色料。随着黄4号投入水中，无色的水瞬间染成黄色。有了颜色，第二步就是加入酸味料维生素C和柠檬酸，让水变成酸的味道。有了酸味，自然第三步就是加入糖分。但是这种糖分不是白砂糖，而是葡萄糖果糖液糖，也就是说，是液体状的葡萄糖和果糖。</p>
 <p>这样一来，果汁拥有的颜色和酸甜味道就大致完成。可是要让人喝出水果的香味，还缺少一样东西，那就是柠檬的香味，于是安部司进一步往容器投入柠檬香味的香料。</p>
 <p>做到这一步，色香味都已经完全具备，可是还差最后一步，那就是真实的果汁不可能如此“透明”，人们还是会觉得不像果汁。怎么办呢？安部司告诉大家，很简单，放入纤维素即可。而这种纤维素，来自废弃的木屑。孩子们听说来自废弃的木屑，都感到难以置信。然而随着安部司的演示，水真的变成了大家熟悉的柠檬味饮料，微微浑浊的样子完全可以以假乱真。</p>
@@ -33,56 +33,56 @@
 <p>当然除了引起糖尿病，其热量也很高，喝下500毫升的饮料，等于摄取200卡路里，几乎占了一天热量需求的大半。</p>
 <p>现代的加工业，本来一开始使用的是白糖，原本大量的白糖摄取也十分有害，不料后来发现直接分解成的葡萄糖和果糖，味道清爽，大受孩子喜爱，加上是从非常廉价的淀粉中分解而来，成本便宜，并呈现液态，制作方便，所以30年前开始，便迅速代替了白糖，危害力猛增。</p>
 <p>如今几乎所有的饮料，包括咖啡饮料，和各种酱料，内含的甜味，都来自这种糖分。因此安部司提醒父母们，购买饮料、雪糕、糖果或者各种孩子喜爱的零食，千万关注其成分标示。这种糖吃多了，绝对不仅仅是虫牙的问题。</p>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/yrwdct367/djy/blob/master/gb/18/6/23/n10507020.md#1" target="_blank" rel="noopener noreferrer">每天喝5罐饮料 男子肝病险死 4种饮料千万少喝</a></span></h3>
-<h3><span style="color: #008000;">· <a style="color: #008000;" href="https://github.com/yrwdct367/djy/blob/master/gb/19/5/16/n11262132.md#1" target="_blank" rel="noopener noreferrer">喝咖啡能延长寿命 医：一天上限2杯</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/19/n10988074.md#1" target="_blank" rel="noopener noreferrer">水是最好的饮品 每天喝足量水 她一年减16公斤</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/23/n10507020.md#1" target="_blank" rel="noopener noreferrer">每天喝5罐饮料 男子肝病险死 4种饮料千万少喝</a></span></h3>
+<h3><span style="color: #008000;">· <a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/16/n11262132.md#1" target="_blank" rel="noopener noreferrer">喝咖啡能延长寿命 医：一天上限2杯</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/19/n10988074.md#1" target="_blank" rel="noopener noreferrer">水是最好的饮品 每天喝足量水 她一年减16公斤</a></span></h3>
 <p>责任编辑：李清风</p>
 
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/13/n10907538.md#1">红豆膳食纤维是糙米5倍！减肥控血糖 有7大益处</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/15/n10913367.md#1">他被孩子的一顿饭震醒 决定揭开加工食品的惊人真相</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/28/n10938757.md#1">3天戒糖排毒 改善发炎病痛 快速减重几公斤</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/30/n10942125.md#1">糖尿病危害有多大？ 1篇了解并发症和症状</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/24/n10997708.md#1">糖尿病人这1类水果可以多吃！饮食注意5件事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/2/6/n11026877.md#1">神韵东瀛完美落幕 日本主流赞中华瑰丽文化</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/1/n13547099.md#1">音乐有强大治愈力！这种音乐是天然良药</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/27/n13532003.md#1">大地是最好的消炎止痛药 接地3大神奇疗愈力</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/20/n13518202.md#1">戒糖后 你为什么会出现不良反应？</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/21/12/15/n13438089.md#1">新型药片或可直接提供运动的益处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/13/n10907538.md#1">红豆膳食纤维是糙米5倍！减肥控血糖 有7大益处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/15/n10913367.md#1">他被孩子的一顿饭震醒 决定揭开加工食品的惊人真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/28/n10938757.md#1">3天戒糖排毒 改善发炎病痛 快速减重几公斤</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/30/n10942125.md#1">糖尿病危害有多大？ 1篇了解并发症和症状</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/24/n10997708.md#1">糖尿病人这1类水果可以多吃！饮食注意5件事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/2/6/n11026877.md#1">神韵东瀛完美落幕 日本主流赞中华瑰丽文化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/23/n13667301.md#1">地震第一时间往外逃是错的？4种行为最危险</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13641388.md#1">改善类风湿关节炎症状的饮食方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/9/n13633895.md#1">73岁帕金森老人疾病逆转！神韵的神奇健康功效</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/27/n13607928.md#1">【舞蹈三剑客】台上一分钟，台下十年功！《为神欢舞》制作花絮</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605880.md#1">瑞莎发视频祈求俄乌停战 吴凤发文安慰打气</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/3/n11084891.htm">放大量糖 甜度竟刚好？专家揭果味饮料制作过程</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/3/n11084891.htm">放大量糖 甜度竟刚好？专家揭果味饮料制作过程</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrwdct367/djy/blob/master/gb/19/3/3/n11084891.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/3/3/n11084891.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
